--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-cd web/code
+mkdir -p web/code
+cd web/code/
 curl https://wordpress.org/latest.tar.gz | tar -xvzf -
 copy the router.php and wp-config.php into code directory
 dc up -d
