--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 mkdir -p web/code
 cd web/code/
 curl https://wordpress.org/latest.tar.gz | tar -xvzf -
-copy the router.php and wp-config.php into code directory
+copy the router.php and wp-config.php into code/wordpress directory
 dc up -d
 
 KNOWN ISSUES
